<resources>
    //Header
    <string name="app_name">Mortgage Calculator</string>
    <string name="action_settings">Settings</string>

    // Home Price
    <string name="homePriceLabel">Home Price:</string>
<!--    <string name="homePrice">$400,000.00</string>-->
    <string name="homePrice">400000</string>
    <string name="homePriceHint">Enter home price</string>

    // Down Payment
    <string name="downPaymentLabel">Down Payment:</string>
    <string name="downPaymentAmount">NA</string>
    <string-array name="downPaymentOptions">
        <item>0%</item>
        <item>3.5%</item>
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
    </string-array>

    // Length of Loan
    <string name="loanLengthLabel">Length of loan:</string>
    <string name="radio15Button">15 years</string>
    <string name="radio30Button">30 years</string>

    // APR
    <string name="aprLabel">APR:</string>
    <string name="apr">4.00</string>
    <string name="aprHint">Enter APR</string>

    // Mortgage Calculation
    <string name="mortgageLabel">Monthly mortgage payment is:</string>
    <string name="mortgageCalculation">NA</string>

</resources>
