<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mortgage_calculator"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="459dp"
        android:layout_marginTop="72dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/homePriceRow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/homePriceLabel"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:lineSpacingExtra="18sp"
                android:text="@string/homePriceLabel"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/homePrice"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fadingEdge="horizontal"
                android:gravity="center"
                android:hint="Enter the price of the home"
                android:inputType="number"
                android:text="@integer/homePrice"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:id="@+id/downPaymentRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/downPaymentLabel"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="18sp"
                android:text="@string/downPaymentLabel"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/downPaymentSpinner"
                android:layout_width="99dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

        <TableRow
            android:id="@+id/downPaymentAmountRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/downPaymentAmount"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:gravity="center"
                android:text="@string/downPaymentAmount"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/loanLengthRow"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/loanLengthLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/loanLengthLabel"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/loanLengthRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio15Button"
                    android:tag="15"
                    android:layout_width="5dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/radio15Button" />

                <RadioButton
                    android:id="@+id/radio30Button"
                    android:tag="30"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio30Button" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/aprRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/aprLabel"
                android:layout_width="177dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aprLabel"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/apr"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:text="@string/apr" />
        </TableRow>

        <TableRow
            android:id="@+id/mortgageLabelRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/mortgageLabel"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="center"
                android:text="@string/mortgageLabel" />

        </TableRow>

        <TableRow
            android:id="@+id/mortgageCalcRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/mortgageCalculation"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/mortgageCalculation"
                android:textColor="#030B20"
                android:textSize="30sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>